samples/_failures_safe/1761634911_176d12_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f1856fc9.c: In function ‘main’:
./samples/SAFE/__tmp_f1856fc9.c:172:30: error: expected ‘;’ at end of input
  172 |             data_char = input
      |                              ^
      |                              ;
./samples/SAFE/__tmp_f1856fc9.c:172:13: error: expected declaration or statement at end of input
  172 |             data_char = input
      |             ^~~~~~~~~
./samples/SAFE/__tmp_f1856fc9.c:172:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f1856fc9.c:172:13: error: expected declaration or statement at end of input
